--- a/portfolio-site/src/components/NavBar/NavBar.module.scss
+++ b/portfolio-site/src/components/NavBar/NavBar.module.scss
@@ -117,7 +117,7 @@
       position: relative;
 
       &:hover {
-        color: $primary;
+        color: $letters;
       }
 
       @include breakpoint(md) {
