--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -5,28 +5,27 @@
   align-items: center;
   place-content: center;
   justify-items: center;
-  padding-top: 100px;
+  padding-top: 40px;
   
   @media (max-width: 768px){
     display: flex;
     align-items: center;
     justify-items: center;
     flex-direction: row;
-    padding-top: 25px;
-    padding-left: 0px;
     justify-content: space-between;
     flex-direction: column;
-    gap: 1rem;
+    gap: 4rem;
 
     .pic {
       width: 30vh;
-      height: 62vh;
+      height: 65vh;
     }
 
     .text{
+      padding-left: 0px;
+      padding-right: 0px;
       width: 40vh;
-      height: 45vh;
-      margin-bottom: 5rem;
+      height: 60vh;
     }
 
     .text h2{
@@ -38,8 +37,8 @@
 .pic{
   color: $light;
   font-family: $Cinzel;
-  width: 25vh;
-  height: 50vh;
+  width: 30vh;
+  height: 65vh;
   background-color:rgba($light, 0.17);
   padding: 3rem;
   border-radius: 10px;
@@ -47,7 +46,7 @@
   
   img{
     border: 1px solid $dark;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     display: block;
     max-width: 100%;
   }
@@ -65,19 +64,17 @@
     text-transform: uppercase;
     letter-spacing: 1.5px;
     font-size: 10px;
-    margin-top: 0.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
 }
 
 .text{
   align-items: center;
   justify-content: center;
-  width: 50vh;
+  width: 60vh;
   height: 40vh;
-  padding-top: 2rem;
   padding-left: 50px;
-  padding-right: 50px;
+  //margin-bottom: 100px;
   color: $light;
   
   h2{
